tests/sksl/errors/DivideByZero.dsl.glsl
### Compilation failed:

error: division by zero

error: division by zero

error: division by zero

error: division by zero

4 errors
